# codesuture

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  aggressive_clean.py  clean_comments.py  clean_comments_aggressive.py  comment_cleanup_report.json  comment_manager.ps1  final_clean.py  pyproject.toml  test_shadow.py
codesuture/: _eval_fix.py  audit.py  cli.py  codesuture_fix.py  explain.py  fingerprint.py  frame_rewind.py  guard_synthesizer.py  lifecycle.py  metrics.py  middleware.py  middleware_asgi.py  opcodes.py  pattern_matcher.py  persistence.py  rewind.py  rollback.py  sandbox.py  shadow.py  suggest.py  tracer.py  utils.py
codesuture/alerts/: __init__.py  config.py  router.py
codesuture/alerts/channels/: __init__.py  file_channel.py  webhook_channel.py
codesuture/incidents/: __init__.py  digest.py  incident.py  incident_log.py  severity.py
codesuture/rewind/: __init__.py  buffer.py  formatter.py  persistence.py  tracer.py
test_scripts/: bug1_test.py  bug3_hard_test.py  crash9_test.py  d2_closure_test.py  d3_shadow_test.py  index_test.py  key_test.py  rw_classmethod.py  rw_decorator.py  rw_kwargs.py  rw_nested.py  rw_property.py  simple_reg_test.py  test_async.py  test_classmethod.py  test_decorator.py  test_kwargs.py  test_middleware.py  test_nested.py  test_property.py  type_test.py  watch_test.py
tests/: test_alerts.py  test_alerts_hard.py  test_http_replay.py  test_incidents.py  test_incidents_hard.py  test_lifecycle.py  test_metrics.py  test_middleware.py  test_middleware_asgi.py  test_negative.py  test_new_guards.py  test_opcodes.py  test_pattern_matcher.py  test_persistence.py  test_rewind.py  test_rollback.py  test_sandbox.py  test_shadow.py  test_ship_gate.py  test_suggestions.py  test_thread_safety.py  test_tracer_active_shield.py  test_tracer_integration.py  test_transparency.py
v4test/: livepatch_verify.py  livepatch_verify_v3.py  livepatch_verify_v4.py  livepatch_verifyv2.py  project_map.md  repeat_test.py  server.py  thread_test.py  tryexcept_test.py
