[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codesuture"
version = "1.0.0"
description = "Runtime Python bytecode patcher with guard knowledge base, persistence, and self-healing re-execution"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["bytecode", "runtime", "patching", "self-healing",
            "debugging", "null-safety", "resilience"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "bytecode>=0.15.1",
]

[project.optional-dependencies]
autonomous = ["llama-cpp-python"]
test = ["pytest>=7.0", "pytest-asyncio"]

[project.scripts]
codesuture = "codesuture.cli:main"

[project.urls]
"Source" = "https://github.com/codesuture/codesuture"

[tool.setuptools.packages.find]
include = ["codesuture*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]